--- a/.github/workflows/prophet-forecast.yml
+++ b/.github/workflows/prophet-forecast.yml
@@ -3,7 +3,15 @@ name: Prophet Forecasting Demo
 on:
   push:
     branches: [ main ]
+  schedule:
+    - cron: '0 9 * * 1'  # Weekly updates every Monday at 9 AM UTC
   workflow_dispatch:
+    inputs:
+      forecast_days:
+        description: 'Number of days to forecast'
+        required: false
+        default: '180'
+        type: string
 
 jobs:
   forecast-analysis:
@@ -18,6 +26,14 @@ jobs:
       with:
         python-version: 3.11
         
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,6 +44,8 @@ jobs:
       
     - name: Run Prophet forecasting
       run: python prophet_demo.py
+      env:
+        FORECAST_DAYS: ${{ github.event.inputs.forecast_days || '180' }}
         
     - name: List generated files
       run: |
@@ -35,12 +53,11 @@ jobs:
         ls -la outputs/
         
     - name: Commit results to repository
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action Bot"
         
-        # Force add outputs (ignore .gitignore for this)
         git add -f outputs/
         
         if ! git diff --cached --quiet; then
@@ -51,3 +68,34 @@ jobs:
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  sync-to-huggingface:
+    runs-on: ubuntu-latest
+    if: contains(toJson(github.event.commits.*.modified), 'app.py')
+    needs: forecast-analysis
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    
+    - name: Clone HuggingFace repository
+      run: |
+        git clone https://huggingface.co/spaces/Talebi-user-2025678/prophet-demo hf-repo
+    
+    - name: Copy updated app.py
+      run: cp app.py hf-repo/
+    
+    - name: Push to HuggingFace
+      run: |
+        cd hf-repo
+        git config user.email "action@github.com"
+        git config user.name "GitHub Action Bot"
+        git add app.py
+        if ! git diff --cached --quiet; then
+          git commit -m "Auto-sync app.py from GitHub"
+          git push
+        else
+          echo "No changes to push"
+        fi
+      env:
+        HF_TOKEN: ${{ secrets.HF_TOKEN }}
