--- a/.github/workflows/prophet-forecast.yml
+++ b/.github/workflows/prophet-forecast.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
-      
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
@@ -35,24 +35,13 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action Bot"
         
-        # Pull latest changes first
-        git pull --rebase origin main
-        
-        git add -f outputs/
-        if ! git diff --cached --quiet; then
+        # Check if there are any changes
+        if [ -n "$(git status --porcelain)" ]; then
+          git add -f outputs/
           git commit -m "Auto-update Prophet forecast results"
-          
-          # Try to push, retry if it fails
-          for i in {1..3}; do
-            if git push origin main; then
-              echo "Push successful"
-              break
-            else
-              echo "Push failed, attempt $i/3"
-              git pull --rebase origin main
-              sleep 5
-            fi
-          done
+          git push
+        else
+          echo "No changes to commit"
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
