--- a/.github/workflows/prophet-forecast.yml
+++ b/.github/workflows/prophet-forecast.yml
@@ -1,8 +1,8 @@
 name: Prophet Forecasting Demo
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+    # branches: [ main ]
   schedule:
     - cron: '0 9 * * 1'
   workflow_dispatch:
